# wormula

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: evaluator.rs  lib.rs  main.rs  parse.rs  term.rs
